added signature process. Everything seems to be working. Adding vis

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -59,7 +59,9 @@
     "active_group_threshold = 3 # min number of active groups to pick from\n",
     "signature_threshold = 5 # min number of nodes needed to sign\n",
     "group_expiry = 5 #number of steps after which a group expires\n",
-    "group_formation_threshold = 2 # min number of nodes needed to create a group\n"
+    "group_formation_threshold = 2 # min number of nodes needed to create a group\n",
+    "node_failure_percent = 5 # % of times nodes fail and have to reconnect\n",
+    "node_death_percent = 0.1 # of time nodes fail and do not reconnect\n"
    ]
   },
   {
@@ -117,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "beacon_model = model.Beacon_Model(nodes, ticket_distribution, active_group_threshold, group_size, signature_threshold, group_expiry, group_formation_threshold)"
+    "beacon_model = model.Beacon_Model(nodes, ticket_distribution, active_group_threshold, group_size, signature_threshold, group_expiry, group_formation_threshold, node_failure_percent, node_death_percent)"
    ]
   },
   {
@@ -132,42 +134,50 @@
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 0\n",
       "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
+      "relay request recieved? = True\n",
+      "     selecting group at random\n",
+      "     no active groups available\n",
+      "     registering new group\n",
+      "             Not enough nodes to register a group\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 3\n",
       "number of active groups = 6\n",
       "group ID 10status = Activesteps to expiry = 5\n",
       "group ID 11status = Activesteps to expiry = 5\n",
       "group ID 12status = Activesteps to expiry = 5\n",
-      "No relay request\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
+      "Number of nodes in the forked state = 9\n",
       "number of active groups = 6\n",
       "group ID 10status = Activesteps to expiry = 4\n",
       "group ID 11status = Activesteps to expiry = 4\n",
       "group ID 12status = Activesteps to expiry = 4\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11baee198>\n",
-      "registering new group\n",
+      "relay request recieved? = True\n",
+      "     selecting group at random\n",
+      "Starting signature process:\n",
+      "     Checking for active nodes in randomly selected group\n",
+      "6\n",
+      "         signature successful\n",
+      "     registering new group\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
+      "Number of nodes in the forked state = 9\n",
       "number of active groups = 7\n",
       "group ID 10status = Activesteps to expiry = 3\n",
       "group ID 11status = Activesteps to expiry = 3\n",
       "group ID 12status = Activesteps to expiry = 3\n",
       "group ID 13status = Activesteps to expiry = 4\n",
-      "No relay request\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
+      "Number of nodes in the forked state = 9\n",
       "number of active groups = 7\n",
       "group ID 10status = Activesteps to expiry = 2\n",
       "group ID 11status = Activesteps to expiry = 2\n",
       "group ID 12status = Activesteps to expiry = 2\n",
       "group ID 13status = Activesteps to expiry = 3\n",
-      "No relay request\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
       "number of active groups = 7\n",
@@ -175,60 +185,63 @@
       "group ID 11status = Activesteps to expiry = 1\n",
       "group ID 12status = Activesteps to expiry = 1\n",
       "group ID 13status = Activesteps to expiry = 2\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11baee198>\n",
-      "registering new group\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
-      "number of active groups = 2\n",
+      "number of active groups = 1\n",
       "group ID 10status = Expiredsteps to expiry = 0\n",
       "group ID 11status = Expiredsteps to expiry = 0\n",
       "group ID 12status = Expiredsteps to expiry = 0\n",
       "group ID 13status = Activesteps to expiry = 1\n",
-      "group ID 14status = Activesteps to expiry = 4\n",
-      "No relay request\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
-      "number of active groups = 1\n",
+      "Number of nodes in the forked state = 9\n",
+      "number of active groups = 0\n",
       "group ID 10status = Expiredsteps to expiry = -1\n",
       "group ID 11status = Expiredsteps to expiry = -1\n",
       "group ID 12status = Expiredsteps to expiry = -1\n",
       "group ID 13status = Expiredsteps to expiry = 0\n",
-      "group ID 14status = Activesteps to expiry = 3\n",
-      "No relay request\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
-      "number of active groups = 1\n",
+      "Number of nodes in the forked state = 9\n",
+      "number of active groups = 0\n",
       "group ID 10status = Expiredsteps to expiry = -2\n",
       "group ID 11status = Expiredsteps to expiry = -2\n",
       "group ID 12status = Expiredsteps to expiry = -2\n",
       "group ID 13status = Expiredsteps to expiry = -1\n",
-      "group ID 14status = Activesteps to expiry = 2\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11dc42e48>\n",
-      "registering new group\n",
+      "relay request recieved? = True\n",
+      "     selecting group at random\n",
+      "     no active groups available\n",
+      "     registering new group\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
-      "number of active groups = 2\n",
+      "number of active groups = 1\n",
       "group ID 10status = Expiredsteps to expiry = -3\n",
       "group ID 11status = Expiredsteps to expiry = -3\n",
       "group ID 12status = Expiredsteps to expiry = -3\n",
       "group ID 13status = Expiredsteps to expiry = -2\n",
-      "group ID 14status = Activesteps to expiry = 1\n",
-      "group ID 15status = Activesteps to expiry = 4\n",
-      "No relay request\n",
+      "group ID 14status = Activesteps to expiry = 4\n",
+      "relay request recieved? = True\n",
+      "     selecting group at random\n",
+      "Starting signature process:\n",
+      "     Checking for active nodes in randomly selected group\n",
+      "6\n",
+      "         signature successful\n",
+      "     registering new group\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
-      "number of active groups = 1\n",
+      "Number of nodes in the forked state = 9\n",
+      "number of active groups = 2\n",
       "group ID 10status = Expiredsteps to expiry = -4\n",
       "group ID 11status = Expiredsteps to expiry = -4\n",
       "group ID 12status = Expiredsteps to expiry = -4\n",
       "group ID 13status = Expiredsteps to expiry = -3\n",
-      "group ID 14status = Expiredsteps to expiry = 0\n",
-      "group ID 15status = Activesteps to expiry = 3\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11dc42eb8>\n",
-      "registering new group\n",
+      "group ID 14status = Activesteps to expiry = 3\n",
+      "group ID 15status = Activesteps to expiry = 4\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
       "number of active groups = 2\n",
@@ -236,128 +249,110 @@
       "group ID 11status = Expiredsteps to expiry = -5\n",
       "group ID 12status = Expiredsteps to expiry = -5\n",
       "group ID 13status = Expiredsteps to expiry = -4\n",
-      "group ID 14status = Expiredsteps to expiry = -1\n",
-      "group ID 15status = Activesteps to expiry = 2\n",
-      "group ID 16status = Activesteps to expiry = 4\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11dc427b8>\n",
-      "registering new group\n",
+      "group ID 14status = Activesteps to expiry = 2\n",
+      "group ID 15status = Activesteps to expiry = 3\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
-      "number of active groups = 3\n",
+      "number of active groups = 2\n",
       "group ID 10status = Expiredsteps to expiry = -6\n",
       "group ID 11status = Expiredsteps to expiry = -6\n",
       "group ID 12status = Expiredsteps to expiry = -6\n",
       "group ID 13status = Expiredsteps to expiry = -5\n",
-      "group ID 14status = Expiredsteps to expiry = -2\n",
-      "group ID 15status = Activesteps to expiry = 1\n",
-      "group ID 16status = Activesteps to expiry = 3\n",
-      "group ID 17status = Activesteps to expiry = 4\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11dc42eb8>\n",
-      "registering new group\n",
+      "group ID 14status = Activesteps to expiry = 1\n",
+      "group ID 15status = Activesteps to expiry = 2\n",
+      "relay request recieved? = True\n",
+      "     selecting group at random\n",
+      "Starting signature process:\n",
+      "     Checking for active nodes in randomly selected group\n",
+      "6\n",
+      "         signature successful\n",
+      "     registering new group\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
-      "number of active groups = 3\n",
+      "Number of nodes in the forked state = 9\n",
+      "number of active groups = 2\n",
       "group ID 10status = Expiredsteps to expiry = -7\n",
       "group ID 11status = Expiredsteps to expiry = -7\n",
       "group ID 12status = Expiredsteps to expiry = -7\n",
       "group ID 13status = Expiredsteps to expiry = -6\n",
-      "group ID 14status = Expiredsteps to expiry = -3\n",
-      "group ID 15status = Expiredsteps to expiry = 0\n",
-      "group ID 16status = Activesteps to expiry = 2\n",
-      "group ID 17status = Activesteps to expiry = 3\n",
-      "group ID 18status = Activesteps to expiry = 4\n",
-      "No relay request\n",
+      "group ID 14status = Expiredsteps to expiry = 0\n",
+      "group ID 15status = Activesteps to expiry = 1\n",
+      "group ID 16status = Activesteps to expiry = 4\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
-      "number of active groups = 3\n",
+      "Number of nodes in the forked state = 9\n",
+      "number of active groups = 1\n",
       "group ID 10status = Expiredsteps to expiry = -8\n",
       "group ID 11status = Expiredsteps to expiry = -8\n",
       "group ID 12status = Expiredsteps to expiry = -8\n",
       "group ID 13status = Expiredsteps to expiry = -7\n",
-      "group ID 14status = Expiredsteps to expiry = -4\n",
-      "group ID 15status = Expiredsteps to expiry = -1\n",
-      "group ID 16status = Activesteps to expiry = 1\n",
-      "group ID 17status = Activesteps to expiry = 2\n",
-      "group ID 18status = Activesteps to expiry = 3\n",
-      "No relay request\n",
+      "group ID 14status = Expiredsteps to expiry = -1\n",
+      "group ID 15status = Expiredsteps to expiry = 0\n",
+      "group ID 16status = Activesteps to expiry = 3\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
-      "number of active groups = 2\n",
+      "number of active groups = 1\n",
       "group ID 10status = Expiredsteps to expiry = -9\n",
       "group ID 11status = Expiredsteps to expiry = -9\n",
       "group ID 12status = Expiredsteps to expiry = -9\n",
       "group ID 13status = Expiredsteps to expiry = -8\n",
-      "group ID 14status = Expiredsteps to expiry = -5\n",
-      "group ID 15status = Expiredsteps to expiry = -2\n",
-      "group ID 16status = Expiredsteps to expiry = 0\n",
-      "group ID 17status = Activesteps to expiry = 1\n",
-      "group ID 18status = Activesteps to expiry = 2\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11dc429e8>\n",
-      "registering new group\n",
+      "group ID 14status = Expiredsteps to expiry = -2\n",
+      "group ID 15status = Expiredsteps to expiry = -1\n",
+      "group ID 16status = Activesteps to expiry = 2\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
-      "number of active groups = 2\n",
+      "number of active groups = 1\n",
       "group ID 10status = Expiredsteps to expiry = -10\n",
       "group ID 11status = Expiredsteps to expiry = -10\n",
       "group ID 12status = Expiredsteps to expiry = -10\n",
       "group ID 13status = Expiredsteps to expiry = -9\n",
-      "group ID 14status = Expiredsteps to expiry = -6\n",
-      "group ID 15status = Expiredsteps to expiry = -3\n",
-      "group ID 16status = Expiredsteps to expiry = -1\n",
-      "group ID 17status = Expiredsteps to expiry = 0\n",
-      "group ID 18status = Activesteps to expiry = 1\n",
-      "group ID 19status = Activesteps to expiry = 4\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x11dc429e8>\n",
-      "registering new group\n",
+      "group ID 14status = Expiredsteps to expiry = -3\n",
+      "group ID 15status = Expiredsteps to expiry = -2\n",
+      "group ID 16status = Activesteps to expiry = 1\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
-      "number of active groups = 2\n",
+      "Number of nodes in the forked state = 9\n",
+      "number of active groups = 0\n",
       "group ID 10status = Expiredsteps to expiry = -11\n",
       "group ID 11status = Expiredsteps to expiry = -11\n",
       "group ID 12status = Expiredsteps to expiry = -11\n",
       "group ID 13status = Expiredsteps to expiry = -10\n",
-      "group ID 14status = Expiredsteps to expiry = -7\n",
-      "group ID 15status = Expiredsteps to expiry = -4\n",
-      "group ID 16status = Expiredsteps to expiry = -2\n",
-      "group ID 17status = Expiredsteps to expiry = -1\n",
-      "group ID 18status = Expiredsteps to expiry = 0\n",
-      "group ID 19status = Activesteps to expiry = 3\n",
-      "group ID 20status = Activesteps to expiry = 4\n",
-      "No relay request\n",
+      "group ID 14status = Expiredsteps to expiry = -4\n",
+      "group ID 15status = Expiredsteps to expiry = -3\n",
+      "group ID 16status = Expiredsteps to expiry = 0\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
       "Number of nodes in the forked state = 10\n",
-      "number of active groups = 2\n",
+      "number of active groups = 0\n",
       "group ID 10status = Expiredsteps to expiry = -12\n",
       "group ID 11status = Expiredsteps to expiry = -12\n",
       "group ID 12status = Expiredsteps to expiry = -12\n",
       "group ID 13status = Expiredsteps to expiry = -11\n",
-      "group ID 14status = Expiredsteps to expiry = -8\n",
-      "group ID 15status = Expiredsteps to expiry = -5\n",
-      "group ID 16status = Expiredsteps to expiry = -3\n",
-      "group ID 17status = Expiredsteps to expiry = -2\n",
-      "group ID 18status = Expiredsteps to expiry = -1\n",
-      "group ID 19status = Activesteps to expiry = 2\n",
-      "group ID 20status = Activesteps to expiry = 3\n",
-      "No relay request\n",
+      "group ID 14status = Expiredsteps to expiry = -5\n",
+      "group ID 15status = Expiredsteps to expiry = -4\n",
+      "group ID 16status = Expiredsteps to expiry = -1\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n",
       "refreshing active nodes list\n",
-      "Number of nodes in the forked state = 10\n",
-      "number of active groups = 2\n",
+      "Number of nodes in the forked state = 9\n",
+      "number of active groups = 0\n",
       "group ID 10status = Expiredsteps to expiry = -13\n",
       "group ID 11status = Expiredsteps to expiry = -13\n",
       "group ID 12status = Expiredsteps to expiry = -13\n",
       "group ID 13status = Expiredsteps to expiry = -12\n",
-      "group ID 14status = Expiredsteps to expiry = -9\n",
-      "group ID 15status = Expiredsteps to expiry = -6\n",
-      "group ID 16status = Expiredsteps to expiry = -4\n",
-      "group ID 17status = Expiredsteps to expiry = -3\n",
-      "group ID 18status = Expiredsteps to expiry = -2\n",
-      "group ID 19status = Activesteps to expiry = 1\n",
-      "group ID 20status = Activesteps to expiry = 2\n",
-      "No relay request\n"
+      "group ID 14status = Expiredsteps to expiry = -6\n",
+      "group ID 15status = Expiredsteps to expiry = -5\n",
+      "group ID 16status = Expiredsteps to expiry = -2\n",
+      "relay request recieved? = False\n",
+      "     No relay request\n"
      ]
     }
    ],
