moved  ownership calcuating function  to group

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -14324,7 +14324,10 @@
     "    \n",
     "    What % of nodes own at least 1 group\n",
     "    \n",
-    "    How likely is it for a node to have a group that it owns to produce a signature "
+    "    How likely is it for a node to have a group that it owns to produce a signature \n",
+    "    \n",
+    "\n",
+    "Look at the edges to make sure node generation is close to representing real world behavior - Markus"
    ]
   },
   {
