added data collector for group ownership distr

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -14197,7 +14197,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -14266,7 +14268,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -14315,19 +14319,7 @@
     }
    ],
    "source": [
-    "Notes:\n",
-    "    Add in a delay between when the request occurs and a signature occurs this triggers new group formation\n",
-    "    Add gap between triggering group formation and registering the group\n",
-    "    \n",
-    "next Question:\n",
-    "    Whats the distribution of group ownership for each node that owns at least 1 group\n",
-    "    \n",
-    "    What % of nodes own at least 1 group\n",
-    "    \n",
-    "    How likely is it for a node to have a group that it owns to produce a signature \n",
-    "    \n",
-    "\n",
-    "Look at the edges to make sure node generation is close to representing real world behavior - Markus"
+    "group_distr = model.datacollector.get_agent_vars_dataframe()"
    ]
   },
   {
