Monospace keep-client service to keep in format

--- a/docs/rfc/rfc-8-continuous-delivery.adoc
+++ b/docs/rfc/rfc-8-continuous-delivery.adoc
@@ -183,7 +183,7 @@ truffle exec ./demo.js --network keep_dev (stake ETH accounts)
 
 To bring parts `Ethereum Contract Deployment` and `keep-client Configuration`
 into automated configuration such that they can be continuously deployed with
-the keep-client service.
+the already automated `keep-client service` deployment.
 
 === Goal
 
