Remove in-use for ConfigMaps, all need updating

--- a/docs/rfc/rfc-8-continuous-delivery.adoc
+++ b/docs/rfc/rfc-8-continuous-delivery.adoc
@@ -201,7 +201,7 @@ will run this workflow/job to trigger a script that will:
 - migrate all contracts if any are changed
 - unlock in-use ETH accounts
 - stake in-use ETH accounts
-- update in-use keep-client ConfigMaps with new contract addresses
+- update keep-client ConfigMaps with new contract addresses
   - Here we must implement an access point for Circle into the private Kubernetes
     cluster.  We can do this with the `gcp_push_deploy` Terraform module.
 
