add Consul configuration description to Continuous Delivery RFC

--- a/docs/rfc/rfc-8-continuous-delivery.adoc
+++ b/docs/rfc/rfc-8-continuous-delivery.adoc
@@ -117,6 +117,31 @@ contracts before clients due to client startup behavior.
 
 ```
 
+=== Sample keep-client Service Consul Configuration
+When operating in a Kubernetes cluster we can query client configurations from
+a Consul host. To provision configurations they are first loaded into the key-
+value store. The keep-client is then instructed via the `consulHost` commandline
+parameter to query Consul for its configuration.
+
+To fully automate deployment of new code on merge to master we need to auto-generate
+a configuration for each test keep-client and upload it to Consul.
+
+*Standard Peer*
+```
+#!/bin/sh
+	consul kv put ethereum '{"URL": "ws://192.168.0.150:8546", "URLRPC": "http://192.168.0.151:8545"}'
+	consul kv get ethereum
+
+	consul kv put ethereum/account '{"Address": "0xc2a56884538778bacd91aa5bf343bf882c5fb18c", "KeyFile": "/tmp/UTC--2018-03-11T01-37-33.202765887Z--c2a56884538778bacd91aa5bf343bf882c5fb18c"}'
+	consul kv get ethereum/account
+
+	consul kv put ethereum/contractaddresses '{"KeepRandomBeacon": "0x639deb0dd975af8e4cc91fe9053a37e4faf37648", "KeepGroup": "0xcf64c2a367341170cb4e09cf8c0ed137d8473cec", "StakingProxy": "0xCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCD"}'
+	consul kv get ethereum/contractaddresses
+
+	consul kv put libp2p '{"Port": 27002, "Peers": ["/ip4/127.0.0.1/tcp/27001/ipfs/12D3KooWKRyzVWW6ChFjQjK4miCty85Niy49tpPV95XdKu1BcvMA"], "Seed": 0}'
+	consul kv get libp2p
+```
+
 === Current Functionality
 
 We currently have a single cloud environment (`keep-dev`) that is in a mixed state of
@@ -154,6 +179,10 @@ are updated *manually*.
 Maintenance log and Kubernetes CRUD commands: https://github.com/keep-network/keep-core/blob/master/infrastructure/kube/keep-dev/kube-setup.org[kube-setup]
 keep-client config files: https://github.com/keep-network/keep-core/tree/master/infrastructure/kube/keep-dev/keep-client/config[keep-client.toml]
 
+*keep-client Consul Configuration:*
+Instead of deploying a keep-client-config.toml file as a ConfigMap we can
+upload these configurations to a Consul host. The keep-client can then query
+the Consul Key Value store for its configuration.
 
 *Ethereum Contract Deployment:*
 
