--- a/docs/development/local-keep-network.adoc
+++ b/docs/development/local-keep-network.adoc
@@ -276,12 +276,12 @@ Running migration: 2_deploy_contracts.js
   Replacing KeepRandomBeacon...
   ... 0x9facb5fe566862e67e50d6ad0fc622f717ee5cb795c7044ba9ad2ff32f9faa70
   KeepRandomBeacon: 0x15045ff30d6327345cc052cc4b8c28dbe974a74b
-  Replacing KeepGroupImplV1...
+  Replacing KeepRandomBeaconBackend...
   ... 0x9e49a94de6dfbc6496c89bb3edff8201ad407ba906893029185f72be2c4e9528
-  KeepGroupImplV1: 0x9da7876f5404dde662bf5cbc6ca1462e777571ff
-  Replacing KeepGroup...
+  KeepRandomBeaconBackend: 0x9da7876f5404dde662bf5cbc6ca1462e777571ff
+  Replacing KeepRandomBeaconBackend...
   ... 0xf4de680e9775a788680403e79b4682947b37295263ec7f14b772b5378bd6ad49
-  KeepGroup: 0xdff3075ca23fe28697d5c4f171cf04abd79bd837
+  KeepRandomBeaconBackend: 0xdff3075ca23fe28697d5c4f171cf04abd79bd837
   ... 0xe6d7bd7377a3e83ba521e4df55604a0dec63fc8011820e8f128a2bf3fe36aab8
   ... 0x7efce8f03761ca2526c37ed6076260b6de2c6b7535f739bc0db1565e3824afbe
 Saving successful migration to network...
@@ -329,12 +329,12 @@ point to the secound account (the first one is used by Ethereum client):
 ```
 
 Update `[ethereum.ContractAddresses]` section to point to the previously 
-deployed contract instances. Please use addresses of `KeepGroup` and 
+deployed contract instances. Please use addresses of `KeepRandomBeaconBackend` and 
 `KeepRandomBeacon` contracts:
 ```
 [ethereum.ContractAddresses]
         KeepRandomBeacon = "0x15045ff30d6327345cc052cc4b8c28dbe974a74b"
-        KeepGroup = "0xdff3075ca23fe28697d5c4f171cf04abd79bd837"
+        KeepRandomBeaconBackend = "0xdff3075ca23fe28697d5c4f171cf04abd79bd837"
 ```
 
 Next, create configuration files for non-bootstrap peers:
